# pitchy

./: CMakeLists.txt  LICENSE  readme.md  vcpkg.json
cmake/: CompilerWarnings.cmake
include/pitchy/: blocking_queue.h  chord.h  interval.h  note.h
include/pitchy/midi/: midi_message.h  midi_note.h  midi_note_monitor.h  midi_source.h
src/: CMakeLists.txt  main.cpp  midi_processor.h
src/midi/: midi_message.cpp  midi_source.cpp
test/: CMakeLists.txt  chord_recognise_test.cpp  interval_test.cpp  note_test.cpp
test/midi/: test_midi_message.cpp  test_midi_note.cpp  test_midi_note_monitor.cpp
